# wasm-rust-demo

./: Cargo.toml  index.html
src/: lib.rs
