[package]
name = "wasm-rust-demo"
version = "0.1.0"
authors = ["benthecarman <benthecarman@live.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
bip39 = { version = "1.0.1" }
bitcoin = "0.29.1"
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false